<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity"
    android:padding="30dp"
    android:gravity="center">

    <TextView
        android:id="@+id/login"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_cashking"
        android:textColor="@color/icons" />

    <EditText
        android:id="@+id/mobile_EditText"
        android:layout_below="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mobile_no"
        android:inputType="number"
        android:textColorHint="@color/icons"
        android:textColorHighlight="@color/icons"
        android:textColor="@color/icons"
        android:maxLength="10" />


    <EditText
        android:id="@+id/password_EditText"
        android:layout_below="@+id/mobile_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/icons"
        android:textColorHint="@color/icons"
        android:textColorHighlight="@color/icons" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/login_Btn"
        android:layout_below="@+id/password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:background="@drawable/accent_button_round"
        android:textColor="@color/icons" />

</RelativeLayout>
