<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layoutForSnackbar">

    <include layout="@layout/include_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/please_be_caregull_wallet"/>

            <!-- phone number & amount inputs -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:stretchColumns="1">

                <TableRow>

                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/ic_phone_black" />

                    <EditText
                        android:id="@+id/mobileNumber"
                        android:inputType="number"
                        android:maxLength="10"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:hint="@string/mobile_number"
                        />
                </TableRow>

                <TableRow>

                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/ic_wallet_black" />

                    <EditText
                        android:id="@+id/amount"
                        android:inputType="number"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:hint="@string/enter_amount"/>
                </TableRow>

            </TableLayout>
            <!--  / phone number & amount inputs -->


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/operator_spinner" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recharge_now"
                android:text="@string/recharge_now"
                android:textColor="@color/icons"
                android:background="@drawable/primary_button_round"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
